# machine-learning-notebook

./: cnn.ipynb  linear_regression.ipynb  mnist_cnn.pt  pyproject.toml  readme.md
Learning/: cnn.ipynb  linear_regression.ipynb  mnist_cnn.pt  pyproject.toml
